fix of some features.

--- a/src/locales/be.json
+++ b/src/locales/be.json
@@ -5,11 +5,14 @@
   "done": "Гатова",
   "edit": "Рэдагаваць",
   "delete": "Выдаліць",
+  "pin": "Замацаваць",
+  "unpin": "Адмацаваць",
   "noNotesFound": "Нататак не знойдзена",
   "confirmDeletion": "Пацвердзіце выдаленне",
   "deleteConfirmationMessage": "Вы ўпэўнены, што хочаце назаўсёды выдаліць нататку \"{title}\"?",
   "cancel": "Адмена",
   "title": "Назва",
+  "source": "Крыніца",
   "tags": "Тэгі",
   "tagsHint": "Абярыце або ўвядзіце новыя тэгі",
   "editing": "Рэдагаванне",
@@ -20,19 +23,18 @@
   "appearance": "Знешні выгляд",
   "darkTheme": "Цёмная тэма",
   "themeIs": "Зараз выкарыстоўваецца {themeName} тэма",
-  "themeNames": {
-    "light": "светлая",
-    "dark": "цёмная"
-  },
+  "themeNames": { "light": "светлая", "dark": "цёмная" },
   "fontSize": "Памер тэксту",
   "fontSizeHint": "Наладзьце памер шрыфту ў дадатку",
+  "viewMode": "Выгляд спісу",
+  "viewModeHint": "Карткі ці кампактны спіс",
   "preview": "Папярэдні прагляд",
   "language": "Мова",
   "textStyle": "Стыль тэксту",
   "style": {
     "normal": "Звычайны",
-    "h1": "Загаловак 1",
-    "h2": "Загаловак 2",
+    "h2": "Загаловак 1",
+    "h3": "Загаловак 2",
     "rubric": "Рубрыка"
   }
 }
