--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -3,16 +3,16 @@
   "searchPlaceholder": "Поиск...",
   "filterByTags": "Фильтр по тегам",
   "done": "Готово",
-  "notesFound_one": "{count} заметка найдена",
-  "notesFound_few": "{count} заметки найдено",
-  "notesFound_many": "{count} заметок найдено",
   "edit": "Редактировать",
   "delete": "Удалить",
+  "pin": "Закрепить",
+  "unpin": "Открепить",
   "noNotesFound": "Заметок не найдено",
   "confirmDeletion": "Подтвердите удаление",
   "deleteConfirmationMessage": "Вы уверены, что хотите навсегда удалить заметку \"{title}\"?",
   "cancel": "Отмена",
   "title": "Название",
+  "source": "Источник",
   "tags": "Теги",
   "tagsHint": "Выберите или введите новые теги",
   "editing": "Редактирование",
@@ -23,19 +23,18 @@
   "appearance": "Внешний вид",
   "darkTheme": "Тёмная тема",
   "themeIs": "Сейчас используется {themeName} тема",
-  "themeNames": {
-    "light": "светлая",
-    "dark": "тёмная"
-  },
+  "themeNames": { "light": "светлая", "dark": "тёмная" },
   "fontSize": "Размер текста",
   "fontSizeHint": "Настройте размер шрифта в приложении",
+  "viewMode": "Вид списка",
+  "viewModeHint": "Карточки или компактный список",
   "preview": "Предпросмотр",
   "language": "Язык",
   "textStyle": "Стиль текста",
   "style": {
     "normal": "Обычный",
-    "h1": "Заголовок 1",
-    "h2": "Заголовок 2",
+    "h2": "Заголовок 1",
+    "h3": "Заголовок 2",
     "rubric": "Рубрика"
   }
 }
