added some pages and categories

--- a/src/locales/be.json
+++ b/src/locales/be.json
@@ -31,6 +31,7 @@
   "preview": "Папярэдні прагляд",
   "language": "Мова",
   "textStyle": "Стыль тэксту",
+  "allPrayers": "Все молитвы",
   "style": {
     "normal": "Звычайны",
     "h2": "Загаловак 1",
