--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -31,6 +31,7 @@
   "preview": "Предпросмотр",
   "language": "Язык",
   "textStyle": "Стиль текста",
+  "allPrayers": "Все молитвы",
   "style": {
     "normal": "Обычный",
     "h2": "Заголовок 1",
