--- a/src/locales/be.json
+++ b/src/locales/be.json
@@ -52,6 +52,34 @@
   "tagsLabel": "Тэгі:",
   "noteSavedSuccess": "Нататка паспяхова захавана!",
   "noteDeletedSuccess": "Нататка паспяхова выдалена!",
+  "about": "Аб праграме",
+  "admin": "Адмінка",
+  "login": "Уваход",
+  "logout": "Выхад",
+  "aboutText": "Гэта праграма створана для асабістага збору малітваў і нататак.",
+  "version": "Версія: 1.0.0",
+  "devWithLove": "Распрацавана з любоўю.",
+  "adminText": "Тут будзе панэль адміністратара. Пакуль гэта толькі нарыхтоўка для будучых функцый.",
+  "adminWarning": "Зараз праграма працуе ў лакальным рэжыме. Любы карыстальнік можа рэдагаваць дадзеныя. Для рэалізацыі паўнавартаснага адміністравання спатрэбіцца сістэма аўтэнтыфікацыі.",
+  "loginTitle": "Уваход для адміністратара",
+  "email": "Email",
+  "emailRequired": "Email абавязковы",
+  "password": "Пароль",
+  "passwordRequired": "Пароль абавязковы",
+  "loginError": "Няправільны email або пароль.",
+  
+"showHiddenNotes": "Паказваць скрытыя нататкі",
+"showHiddenNotesHint": "Уплывае толькі на ваш выгляд спісу",
+"hiddenNote": "Нататка схаваная (не бачная іншым)",
+"fontFamily": "Шрыфт праграмы",
+"fontFamilyHint": "Абярыце асноўны шрыфт для тэкстаў",
+"keepScreenOn": "Не выключаць экран",
+"keepScreenOnHint": "Карысна падчас малітвы або чытання",
+"generalSettings": "Агульныя налады",
+"menuImages": "Выявы ў меню",
+"menuImagesHint": "Усталюйце свае фонавыя малюнкі",
+"lightThemeImage": "Для светлай тэмы",
+"darkThemeImage": "Для цёмнай тэмы",
   "langNames": {
     "ru": "Русский",
     "be": "Беларуская",
