--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -52,6 +52,33 @@
   "tagsLabel": "Теги:",
   "noteSavedSuccess": "Заметка успешно сохранена!",
   "noteDeletedSuccess": "Заметка успешно удалена!",
+  "about": "О приложении",
+  "admin": "Админка",
+  "login": "Вход",
+  "logout": "Выход",
+  "aboutText": "Это приложение создано для личного сбора молитв и заметок.",
+  "version": "Версия: 1.0.0",
+  "devWithLove": "Разработано с любовью.",
+  "adminText": "Здесь будет панель администратора. Пока это лишь заготовка для будущих функций.",
+  "adminWarning": "Сейчас приложение работает в локальном режиме. Любой пользователь может редактировать данные. Для реализации полноценного администрирования потребуется система аутентификации.",
+  "loginTitle": "Вход для администратора",
+  "email": "Email",
+  "emailRequired": "Email обязателен",
+  "password": "Пароль",
+  "passwordRequired": "Пароль обязателен",
+  "loginError": "Неверный email или пароль.",
+  "showHiddenNotes": "Показывать скрытые заметки",
+"showHiddenNotesHint": "Влияет только на ваш вид списка",
+"hiddenNote": "Заметка скрыта (не видна другим)",
+"fontFamily": "Шрифт приложения",
+"fontFamilyHint": "Выберите основной шрифт для текстов",
+"keepScreenOn": "Не выключать экран",
+"keepScreenOnHint": "Полезно во время молитвы или чтения",
+"generalSettings": "Общие настройки",
+"menuImages": "Изображения в меню",
+"menuImagesHint": "Установите свои фоновые картинки",
+"lightThemeImage": "Для светлой темы",
+"darkThemeImage": "Для темной темы",
   "langNames": {
     "ru": "Русский",
     "be": "Беларуская",
