--- a/src/locales/be.json
+++ b/src/locales/be.json
@@ -80,9 +80,10 @@
 "menuImagesHint": "Усталюйце свае фонавыя малюнкі",
 "lightThemeImage": "Для светлай тэмы",
 "darkThemeImage": "Для цёмнай тэмы",
+"previewText": "Так будзе выглядаць асноўны тэкст вашай нататкі.",
   "langNames": {
-    "ru": "Русский",
-    "be": "Беларуская",
-    "la": "Latina"
+    "ru": "Рус",
+    "be": "Бел",
+    "la": "Lat"
   }
 }
