--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -79,9 +79,10 @@
 "menuImagesHint": "Установите свои фоновые картинки",
 "lightThemeImage": "Для светлой темы",
 "darkThemeImage": "Для темной темы",
+"previewText": "Так будет выглядеть основной текст вашей заметки.",
   "langNames": {
-    "ru": "Русский",
-    "be": "Беларуская",
-    "la": "Latina"
+    "ru": "Рус",
+    "be": "Бел",
+    "la": "Lat"
   }
 }
