--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -106,5 +106,25 @@
    "endNovena": "Завершить новенну",
   "novenaTrackerHint": "Нажимайте на ячейки, чтобы отметить выполненные или пропущенные дни.",
   "novenaReminderTitle": "Напоминание о молитве",
-  "novenaReminderBody": "Не забудьте помолиться новенну: {title}"
+  "novenaSuggestionText": "Не забудьте помолиться новенну: {title}, {days} дней",
+  "hideTracker":"Схваваць навэнну",
+  "showTracker": "Раскрыть навэнну",
+   "novenaSettings":"Налады навэнны",
+  "isNovenaPrayerLabel":"Навэнна",
+  "recommendedDateLabel":"Свята",
+  "novenaSuggestionTitle": "Предложение новенны",
+  "viewPrayer": "Посмотреть",
+  "remindLater": "Напомнить" ,
+  "myPrayerRule": "Молитвенное правило",
+  "addPrayerToRule": "Добавить молитву в правило",
+  "findPrayer": "Найти молитву...",
+  "ruleIsEmpty": "Ваше правило пока пусто. Добавьте молитвы с помощью поля поиска выше.",
+  "noRuleCreated": "Молитвенное правило еще не создано",
+  "noRuleCreatedHint": "Нажмите кнопку ниже, чтобы составить свой список ежедневных молитв.",
+  "createRule": "Создать правило",
+  "noTextInLang": "Текст на этом языке отсутствует",
+  "moveUp": "Переместить вверх",
+  "moveDown": "Переместить вниз",
+  "enableNovenaSuggestions": "Предложения по новеннам",
+  "enableNovenaSuggestionsHint": "Показывать уведомления, когда подходит время для рекомендованных новенн"
 }
