--- a/src/locales/be.json
+++ b/src/locales/be.json
@@ -1,130 +1,121 @@
 {
   "appTitle": "Мае малітвы",
+  "allPrayers": "Усе малітвы",
+  "myPrayerRule": "Малітоўнае правіла",
+
   "searchPlaceholder": "Пошук...",
   "filterByTags": "Фільтр па тэгах",
+  "viewMode": "Выгляд спісу",
+  "viewModeHint": "Карткі ці кампактны спіс",
+
   "done": "Гатова",
   "edit": "Рэдагаваць",
   "delete": "Выдаліць",
+  "cancel": "Адмена",
+  "add": "Дадаць",
+  "start": "Пачаць",
+  "days": "дзён",
+
   "pin": "Замацаваць",
   "unpin": "Адмацаваць",
-  "noNotesFound": "Нататак не знойдзена",
-  "confirmDeletion": "Пацвердзіце выдаленне",
-  "deleteConfirmationMessage": "Вы ўпэўнены, што хочаце назаўсёды выдаліць нататку \"{title}\"?",
-  "cancel": "Адмена",
+  "loading": "Загрузка...",
+  "backToHome": "Вярнуцца на галоўную",
+
   "title": "Назва",
   "source": "Крыніца",
   "tags": "Тэгі",
-  "tagsHint": "Абярыце або ўвядзіце новыя тэгі",
-  "editing": "Рэдагаванне",
+  "sourceLabel": "Крыніца:",
+  "tagsLabel": "Тэгі:",
   "newNote": "Новая нататка",
-  "loading": "Загрузка...",
+  "editing": "Рэдагаванне",
+  "noteSavedSuccess": "Нататка паспяхова захавана!",
+  "noteDeletedSuccess": "Нататка паспяхова выдалена!",
+  "hiddenNote": "Нататка схаваная (не бачная іншым)",
+  "noNotesFound": "Нататак не знойдзена",
   "noteNotFound": "Нататка не знойдзена",
   "noteNotFoundMessage": "Магчыма, яна была выдаленая або спасылка няправільная.",
-  "backToHome": "Вярнуцца на галоўную",
-  "settings": "Налады",
-  "appearance": "Знешні выгляд",
-  "darkTheme": "Цёмная тэма",
-  "themeIs": "Зараз выкарыстоўваецца {themeName} тэма",
-  "themeNames": { "light": "светлая", "dark": "цёмная" },
-  "fontSize": "Памер тэксту",
-  "fontSizeHint": "Наладзьце памер шрыфту ў дадатку",
-  "viewMode": "Выгляд спісу",
-  "viewModeHint": "Карткі ці кампактны спіс",
-  "preview": "Папярэдні прагляд",
-  "language": "Мова",
-  "textStyle": "Стыль тэксту",
-  "allPrayers": "Усе малітвы",
+  "confirmDeletion": "Пацвердзіце выдаленне",
+  "deleteConfirmationMessage": "Вы ўпэўнены, што хочаце назаўсёды выдаліць нататку \"{title}\"?",
+
   "style": {
     "normal": "Звычайны",
     "h2": "Загаловак 1",
     "h3": "Загаловак 2",
     "rubric": "Рубрыка"
   },
+  "linkedNotesAdd": "Дадаць сувязь",
+  "linkedNotesSelect": "Абярыце нататку для сувязі",
+  "noTextInLang": "Тэкст на гэтай мове адсутнічае",
+
+  "settings": "Налады",
+  "generalSettings": "Агульныя налады",
+  "appearance": "Знешні выгляд",
+  "darkTheme": "Цёмная тэма",
+  "themeIs": "Зараз выкарыстоўваецца {themeName} тэма",
+  "themeNames": { "light": "светлая", "dark": "цёмная" },
+  "fontSize": "Памер тэксту",
+  "fontSizeHint": "Наладзьце памер шрыфту для чытання",
+  "fontFamily": "Шрыфт праграмы",
+  "fontFamilyHint": "Абярыце асноўны шрыфт для інтэрфейсу",
+  "previewText": "Так будзе выглядаць асноўны тэкст вашай нататкі.",
+  "keepScreenOn": "Не выключаць экран",
+  "keepScreenOnHint": "Карысна падчас малітвы або чытання",
+  "language": "Мова",
   "menuCategories": "Катэгорыі ў меню",
   "addCategory": "Дадаць катэгорыю",
   "categoryName": "Назва катэгорыі",
   "categoryTags": "Абярыце або ўвядзіце тэгі",
-  "add": "Дадаць",
-  "linkedNotesTitle": "Глядзіце таксама:",
-  "linkedNotesAdd": "Дадаць сувязь",
-  "linkedNotesSelect": "Абярыце нататку для сувязі",
-  "sourceLabel": "Крыніца:",
-  "tagsLabel": "Тэгі:",
-  "noteSavedSuccess": "Нататка паспяхова захавана!",
-  "noteDeletedSuccess": "Нататка паспяхова выдалена!",
-  "about": "Аб праграме",
+  "textSettings": "Налады тэксту",
+
   "admin": "Адмінка",
-  "login": "Уваход",
-  "logout": "Выхад",
+  "adminText": "Тут будзе панэль адміністратара. Пакуль гэта толькі нарыхтоўка для будучых функцый.",
+  "showHiddenNotes": "Паказваць скрытыя нататкі",
+  "showHiddenNotesHint": "Уплывае толькі на ваш выгляд спісу",
+
+  "about": "Аб праграме",
   "aboutText": "Гэта праграма створана для асабістага збору малітваў і нататак.",
   "version": "Версія: 1.0.0",
   "devWithLove": "Распрацавана з любоўю.",
-  "adminText": "Тут будзе панэль адміністратара. Пакуль гэта толькі нарыхтоўка для будучых функцый.",
-  "adminWarning": "Зараз праграма працуе ў лакальным рэжыме. Любы карыстальнік можа рэдагаваць дадзеныя. Для рэалізацыі паўнавартаснага адміністравання спатрэбіцца сістэма аўтэнтыфікацыі.",
+
+  "login": "Уваход",
+  "logout": "Выхад",
   "loginTitle": "Уваход для адміністратара",
   "email": "Email",
   "emailRequired": "Email абавязковы",
   "password": "Пароль",
   "passwordRequired": "Пароль абавязковы",
   "loginError": "Няправільны email або пароль.",
-  
-"showHiddenNotes": "Паказваць скрытыя нататкі",
-"showHiddenNotesHint": "Уплывае толькі на ваш выгляд спісу",
-"hiddenNote": "Нататка схаваная (не бачная іншым)",
-"fontFamily": "Шрыфт праграмы",
-"fontFamilyHint": "Абярыце асноўны шрыфт для тэкстаў",
-"keepScreenOn": "Не выключаць экран",
-"keepScreenOnHint": "Карысна падчас малітвы або чытання",
-"generalSettings": "Агульныя налады",
-"menuImages": "Выявы ў меню",
-"menuImagesHint": "Усталюйце свае фонавыя малюнкі",
-"lightThemeImage": "Для светлай тэмы",
-"darkThemeImage": "Для цёмнай тэмы",
-"previewText": "Так будзе выглядаць асноўны тэкст вашай нататкі.",
-"textSettings": "Настройкі тэкста",
- "langNames": {
-    "ru": "Руская",
-    "be": "Беларуская",
-    "la": "Latina"
-  },
+
   "langLabels": {
     "ru": "Рус",
     "be": "Бел",
-    "la": "Lat"
+    "la": "Lat",
+    "pl": "Pl"
   },
-  
-   "startNovena": "Пачаць навэнну",
+
+  "novenaSettings": "Налады навэнны",
+  "isNovenaPrayerLabel": "Гэта малітва-навэнна",
+  "recommendedDateLabel": "Дата свята (для прапаноў)",
+  "recommendedDateHint": "Пазначце дзень, да якога прывязана навэнна",
+  "startNovena": "Пачаць навэнну",
+  "endNovena": "Завяршыць навэнну",
   "novenaDurationTitle": "Працягласць навэнны",
   "novenaDaysLabel": "Колькасць дзён",
-  "days": "дзён",
-  "start": "Пачаць",
   "prayerNovena": "Малітоўная навэнна",
-  "daysCompleted": "дзён выканана",
-  "day": "Дзень",
-  "todayCompleted": "Сёння выканана!",
-  "markTodayAsCompleted": "Адзначыць сёння",
-   "endNovena": "Завершить новенну",
-  "novenaTrackerHint": "Нажимайте на ячейки, чтобы отметить выполненные или пропущенные дни.",
-  "novenaReminderTitle": "Напоминание о молитве",
-  "novenaSuggestionText": "Не забудьте помолиться новенну: {title}, {days} дней",
-  "hideTracker":"Скрыть навэнну",
-  "showTracker": "Раскрыть навэнну",
-  "novenaSettings":"Налады навэнны",
-  "isNovenaPrayerLabel":"Навэнна",
-  "recommendedDateLabel":"Свята",
-  "novenaSuggestionTitle": "Предложение новенны",
-  "viewPrayer": "Посмотреть",
-  "remindLater": "Напомнить" ,
-  "myPrayerRule": "Молитвенное правило",
-  "addPrayerToRule": "Добавить молитву в правило",
-  "findPrayer": "Найти молитву...",
-  "ruleIsEmpty": "Ваше правило пока пусто. Добавьте молитвы с помощью поля поиска выше.",
-  "noRuleCreated": "Молитвенное правило еще не создано",
-  "noRuleCreatedHint": "Нажмите кнопку ниже, чтобы составить свой список ежедневных молитв.",
-  "createRule": "Создать правило",
-  "noTextInLang": "Текст на этом языке отсутствует",
-  "moveUp": "Переместить вверх",
-  "moveDown": "Переместить вниз",
-  "enableNovenaSuggestions": "Предложения по новеннам",
-  "enableNovenaSuggestionsHint": "Показывать уведомления, когда подходит время для рекомендованных новенн"
+  "novenaTrackerHint": "Націскайце на ячэйкі, каб адзначыць выкананыя або прапушчаныя дні.",
+  "novenaSuggestionTitle": "Прапанова навэнны",
+  "novenaSuggestionText": "Сёння пачынаецца навэнна «{title}» ({days} дзён). Не жадаеце памаліцца?",
+  "viewPrayer": "Паглядзець",
+  "remindLater": "Пазней",
+  "enableNovenaSuggestions": "Прапановы па навэннах",
+  "enableNovenaSuggestionsHint": "Паказваць апавяшчэнні, калі падыходзіць час для рэкамендаваных навэнн",
+
+  "addPrayerToRule": "Дадаць малітву ў правіла",
+  "findPrayer": "Знайсці малітву...",
+  "ruleIsEmpty": "Ваша правіла пакуль пустое.",
+  "ruleIsEmptyHint": "Дадайце малітвы, каб скласці сваё правіла.",
+  "noRuleCreated": "Малітоўнае правіла яшчэ не створана",
+  "noRuleCreatedHint": "Націсніце кнопку ніжэй, каб скласці свой спіс штодзённых малітваў.",
+  "createRule": "Стварыць правіла",
+  "decline": "Адхіліць"
 }
