--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,130 +1,121 @@
 {
   "appTitle": "Мои молитвы",
+  "allPrayers": "Все молитвы",
+  "myPrayerRule": "Молитвенное правило",
+
   "searchPlaceholder": "Поиск...",
   "filterByTags": "Фильтр по тегам",
+  "viewMode": "Вид списка",
+  "viewModeHint": "Карточки или компактный список",
+
   "done": "Готово",
   "edit": "Редактировать",
   "delete": "Удалить",
+  "cancel": "Отмена",
+  "add": "Добавить",
+  "start": "Начать",
+  "days": "дней",
+
   "pin": "Закрепить",
   "unpin": "Открепить",
-  "noNotesFound": "Заметок не найдено",
-  "confirmDeletion": "Подтвердите удаление",
-  "deleteConfirmationMessage": "Вы уверены, что хотите навсегда удалить заметку \"{title}\"?",
-  "cancel": "Отмена",
+  "loading": "Загрузка...",
+  "backToHome": "Вернуться на главную",
+
   "title": "Название",
   "source": "Источник",
   "tags": "Теги",
-  "tagsHint": "Выберите или введите новые теги",
-  "editing": "Редактирование",
+  "sourceLabel": "Источник:",
+  "tagsLabel": "Теги:",
   "newNote": "Новая заметка",
-  "loading": "Загрузка...",
+  "editing": "Редактирование",
+  "noteSavedSuccess": "Заметка успешно сохранена!",
+  "noteDeletedSuccess": "Заметка успешно удалена!",
+  "hiddenNote": "Заметка скрыта (не видна другим)",
+  "noNotesFound": "Заметок не найдено",
   "noteNotFound": "Заметка не найдена",
   "noteNotFoundMessage": "Возможно, она была удалена или ссылка неверна.",
-  "backToHome": "Вернуться на главную",
-  "settings": "Настройки",
-  "appearance": "Внешний вид",
-  "darkTheme": "Тёмная тема",
-  "themeIs": "Сейчас используется {themeName} тема",
-  "themeNames": { "light": "светлая", "dark": "тёмная" },
-  "fontSize": "Размер текста",
-  "fontSizeHint": "Настройте размер шрифта в приложении",
-  "viewMode": "Вид списка",
-  "viewModeHint": "Карточки или компактный список",
-  "preview": "Предпросмотр",
-  "language": "Язык",
-  "textStyle": "Стиль текста",
-  "allPrayers": "Все молитвы",
+  "confirmDeletion": "Подтвердите удаление",
+  "deleteConfirmationMessage": "Вы уверены, что хотите навсегда удалить заметку \"{title}\"?",
+
   "style": {
     "normal": "Обычный",
     "h2": "Заголовок 1",
     "h3": "Заголовок 2",
     "rubric": "Рубрика"
   },
+  "linkedNotesAdd": "Добавить связь",
+  "linkedNotesSelect": "Выберите заметку для связи",
+  "noTextInLang": "Текст на этом языке отсутствует",
+
+  "settings": "Настройки",
+  "generalSettings": "Общие настройки",
+  "appearance": "Внешний вид",
+  "darkTheme": "Тёмная тема",
+  "themeIs": "Сейчас используется {themeName} тема",
+  "themeNames": { "light": "светлая", "dark": "тёмная" },
+  "fontSize": "Размер текста",
+  "fontSizeHint": "Настройте размер шрифта для чтения",
+  "fontFamily": "Шрифт приложения",
+  "fontFamilyHint": "Выберите основной шрифт для интерфейса",
+  "previewText": "Так будет выглядеть основной текст вашей заметки.",
+  "keepScreenOn": "Не выключать экран",
+  "keepScreenOnHint": "Полезно во время молитвы или чтения",
+  "language": "Язык",
   "menuCategories": "Категории в меню",
   "addCategory": "Добавить категорию",
   "categoryName": "Название категории",
   "categoryTags": "Выберите или введите теги",
-  "add": "Добавить",
-  "linkedNotesTitle": "Смотрите также:",
-  "linkedNotesAdd": "Добавить связь",
-  "linkedNotesSelect": "Выберите заметку для связи",
-  "sourceLabel": "Источник:",
-  "tagsLabel": "Теги:",
-  "noteSavedSuccess": "Заметка успешно сохранена!",
-  "noteDeletedSuccess": "Заметка успешно удалена!",
-  "about": "О приложении",
+  "textSettings": "Настройки текста",
+
   "admin": "Админка",
-  "login": "Вход",
-  "logout": "Выход",
+  "adminText": "Здесь будет панель администратора. Пока это лишь заготовка для будущих функций.",
+  "showHiddenNotes": "Показывать скрытые заметки",
+  "showHiddenNotesHint": "Влияет только на ваш вид списка",
+
+  "about": "О приложении",
   "aboutText": "Это приложение создано для личного сбора молитв и заметок.",
   "version": "Версия: 1.0.0",
   "devWithLove": "Разработано с любовью.",
-  "adminText": "Здесь будет панель администратора. Пока это лишь заготовка для будущих функций.",
-  "adminWarning": "Сейчас приложение работает в локальном режиме. Любой пользователь может редактировать данные. Для реализации полноценного администрирования потребуется система аутентификации.",
+
+  "login": "Вход",
+  "logout": "Выход",
   "loginTitle": "Вход для администратора",
   "email": "Email",
   "emailRequired": "Email обязателен",
   "password": "Пароль",
   "passwordRequired": "Пароль обязателен",
   "loginError": "Неверный email или пароль.",
-  "showHiddenNotes": "Показывать скрытые заметки",
-"showHiddenNotesHint": "Влияет только на ваш вид списка",
-"hiddenNote": "Заметка скрыта (не видна другим)",
-"fontFamily": "Шрифт приложения",
-"fontFamilyHint": "Выберите основной шрифт для текстов",
-"keepScreenOn": "Не выключать экран",
-"keepScreenOnHint": "Полезно во время молитвы или чтения",
-"generalSettings": "Общие настройки",
-"menuImages": "Изображения в меню",
-"menuImagesHint": "Установите свои фоновые картинки",
-"lightThemeImage": "Для светлой темы",
-"darkThemeImage": "Для темной темы",
-"previewText": "Так будет выглядеть основной текст вашей заметки.",
-"textSettings": "Настройки текста",
-  "langNames": {
-    "ru": "Русский",
-    "be": "Беларуская",
-    "la": "Latina",
-    "pl": "Polski"
-  },
+
   "langLabels": {
     "ru": "Рус",
     "be": "Бел",
     "la": "Lat",
     "pl": "Pl"
   },
+
+  "novenaSettings": "Настройки новенны",
+  "isNovenaPrayerLabel": "Это молитва-новенна",
+  "recommendedDateLabel": "Дата праздника (для предложений)",
+  "recommendedDateHint": "Укажите день, к которому привязана новенна",
   "startNovena": "Начать новенну",
+  "endNovena": "Завершить новенну",
   "novenaDurationTitle": "Длительность новенны",
   "novenaDaysLabel": "Количество дней",
-  "days": "дней",
-  "start": "Начать",
   "prayerNovena": "Молитвенная новенна",
-  "daysCompleted": "дней выполнено",
-  "day": "День",
-  "todayCompleted": "Сегодня выполнено!",
-  "markTodayAsCompleted": "Отметить сегодня",
-   "endNovena": "Завершить новенну",
   "novenaTrackerHint": "Нажимайте на ячейки, чтобы отметить выполненные или пропущенные дни.",
-  "novenaReminderTitle": "Напоминание о молитве",
-  "novenaSuggestionText": "Не забудьте помолиться новенну: {title}, {days} дней",
-  "hideTracker":"Схваваць навэнну",
-  "showTracker": "Раскрыть навэнну",
-   "novenaSettings":"Налады навэнны",
-  "isNovenaPrayerLabel":"Навэнна",
-  "recommendedDateLabel":"Свята",
   "novenaSuggestionTitle": "Предложение новенны",
+  "novenaSuggestionText": "Сегодня начинается новенна «{title}» ({days} дней). Не хотите помолиться?",
   "viewPrayer": "Посмотреть",
-  "remindLater": "Напомнить" ,
-  "myPrayerRule": "Молитвенное правило",
+  "remindLater": "Позже",
+  "enableNovenaSuggestions": "Предложения по новеннам",
+  "enableNovenaSuggestionsHint": "Показывать уведомления, когда подходит время для рекомендованных новенн",
+
   "addPrayerToRule": "Добавить молитву в правило",
   "findPrayer": "Найти молитву...",
-  "ruleIsEmpty": "Ваше правило пока пусто. Добавьте молитвы с помощью поля поиска выше.",
+  "ruleIsEmpty": "Ваше правило пока пусто.",
+  "ruleIsEmptyHint": "Добавьте молитвы, чтобы составить свое правило.",
   "noRuleCreated": "Молитвенное правило еще не создано",
   "noRuleCreatedHint": "Нажмите кнопку ниже, чтобы составить свой список ежедневных молитв.",
   "createRule": "Создать правило",
-  "noTextInLang": "Текст на этом языке отсутствует",
-  "moveUp": "Переместить вверх",
-  "moveDown": "Переместить вниз",
-  "enableNovenaSuggestions": "Предложения по новеннам",
-  "enableNovenaSuggestionsHint": "Показывать уведомления, когда подходит время для рекомендованных новенн"
+  "decline": "Отклонить"
 }
