holy mass. fixed translations chips

--- a/src/locales/be.json
+++ b/src/locales/be.json
@@ -157,5 +157,6 @@
   "copyLink": "Капіяваць спасылку",
   "linkCopied": "Спасылка скапіявана ў буфер абмену!",
   "shareError": "Не атрымалася падзяліцца. Магчыма, ваш браўзер не падтрымлівае гэту функцыю.",
-  "filters": "Фільтры"
+  "filters": "Фільтры",
+  "holyMass": "Святая Імша"
 }
