--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -157,5 +157,6 @@
   "copyLink": "Копировать ссылку",
   "linkCopied": "Ссылка скопирована в буфер обмена!",
   "shareError": "Не удалось поделиться. Возможно, ваш браузер не поддерживает эту функцию.",
-  "filters": "Фильтры"
+  "filters": "Фильтры",
+  "holyMass": "Святая Месса"
 }
